Fix RadioButtonGroup alignment https://github.com/elicit-experiment/frontend/issues/23

--- a/source/application/Style/common.styl
+++ b/source/application/Style/common.styl
@@ -44,6 +44,18 @@ label.btn.disabled {
 }
 
 .QuestionBlock {	
-	max-width: 500px;
+	max-width: 600px;
 	margin: 0 auto !important;
+}
+
+.row.subrow {
+	padding-left: 0;
+	padding-right: 0;
+	margin-left: 0;
+	margin-right: 0;
+
+	> * {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
