--- a/source/application/Style/video.styl
+++ b/source/application/Style/video.styl
@@ -73,4 +73,4 @@
 
 .stimulus-container
 	width: 100%
-	text-align: center
+	text-align: left
